--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.2.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
